--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>by.it-academy.jd2</groupId>
-    <artifactId>M-JD2-98-23</artifactId>
-    <version>0.0.0-SNAPSHOT</version>
+    <artifactId>NinjaChat</artifactId>
+    <version>1.0.0</version>
     <packaging>war</packaging>
 
     <properties>
