--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,4 +18,8 @@
         <filter-name>EncodingFilter</filter-name>
         <url-pattern>/enc</url-pattern>
     </filter-mapping>
+
+    <listener>
+        <listener-class>by.it_academy.jd2.Mk_JD2_98_23.controllers.listeners.ActiveSessionListener</listener-class>
+    </listener>
 </web-app>
