refactor  web.xml

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,6 @@
     </filter-mapping>
 
     <listener>
-        <listener-class>by.it_academy.jd2.Mk_JD2_98_23.controllers.listeners.ActiveSessionListener</listener-class>
+        <listener-class>by.it_academy.jd2.Mk_JD2_98_23.controllers.listeners.ActiveSessionsListener</listener-class>
     </listener>
 </web-app>
