--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,7 @@
         metadata-complete="false"
 >
     <display-name>Mk-JD2-98-23</display-name>
+
     <filter>
         <filter-name>EncodingFilter</filter-name>
         <filter-class>by.it_academy.jd2.Mk_JD2_98_23.controllers.filters.EncodingFilter</filter-class>
@@ -14,12 +15,35 @@
             <param-value>UTF-8</param-value>
         </init-param>
     </filter>
+
     <filter-mapping>
         <filter-name>EncodingFilter</filter-name>
-        <url-pattern>/enc</url-pattern>
+        <url-pattern>/ui/*</url-pattern>
+    </filter-mapping>
+
+    <filter>
+        <filter-name>AdminSecurityFilter</filter-name>
+        <filter-class>by.it_academy.jd2.Mk_JD2_98_23.controllers.filters.AdminSecurityFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>AdminSecurityFilter</filter-name>
+        <url-pattern>/ui/admin/*</url-pattern>
+        <url-pattern>/api/admin/*</url-pattern>
+    </filter-mapping>
+
+    <filter>
+        <filter-name>UserSecurityFilter</filter-name>
+        <filter-class>by.it_academy.jd2.Mk_JD2_98_23.controllers.filters.UserSecurityFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>UserSecurityFilter</filter-name>
+        <url-pattern>/ui/user/*</url-pattern>
+        <url-pattern>/api/message</url-pattern>
     </filter-mapping>
 
     <listener>
         <listener-class>by.it_academy.jd2.Mk_JD2_98_23.controllers.listeners.ActiveSessionsListener</listener-class>
     </listener>
+
 </web-app>
